# Interview-Mental-Health-Model

./: .gitignore  README.md  config.yml  cov.xml  justfile  pyproject.toml  requirements.txt
data/: depression_data_sample.csv  member_transcripts.csv  sentiment_result.csv
model_file/: training_info.json  training_log.json
model_files/: best_pipeline.pkl  training_info.json  training_log.json
reports/: data_drift_report.html  depression_data_profile.html
src/genai_src/: data_preparation.py  prompt_template.py  sentiment_analysis.py  utils.py  visulisation.py
src/ml_src/: data_clean.py  data_ingest.py  exploration.py  main.py  predict.py  train_pipeline.py  utils.py
tests/tests_ml/: test_data_ingest.py
