[tool.poetry]
name = "src"
version = "0.1.0"
description = "Mental health model for the interview tasks"
authors = ["Linlin Yu"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.14"
pandas = "^2.2.3"
ydata-profiling = "^4.11.0"
scikit-learn = "^1.5.2"
lightgbm = "^4.5.0"
xgboost = "^2.1.1"
mlflow = "^2.17.0"
click = "^8.1.7"
langchain = "^0.3.4"
openai = "0.28"
langchain-community = "^0.3.3"
explainerdashboard = "^0.4.7"
evidently = "^0.4.38"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"
ipykernel = "^6.29.5"
icecream = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
include = ["pyproject.toml", "src/genai_src/*", "src/ml_src/*", "tests/*"]
target-version = "py310"
line-length = 100

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"
exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["ALL", "RUF100"]
exclude = ["*.ipynb"]
fixable = ["ALL"]
unfixable = []
ignore = [
    "D203",
    "D213",
    "COM812",
    "ISC001",
    "S101",
    "D100",
    "D103",
    "ERA001",
    "D105",
    "D107",
    "G004",
    "D101",
    "BLE001",
]
